# Codefest_AD_Astra_Final_Mision_1-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp
CryptoLib/include/: decrypt.h
CryptoLib/src/: decrypt.cpp  encrypt.cpp  hkdf.cpp
src/CryptoLib/include/: encrypt.h  hkdf.h
src/CryptoLib/src/: decrypt.cpp  encrypt.cpp
